--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,14 +32,15 @@ jobs:
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: hello-world  # Replace with your ECR repository name
+        IMAGE_TAG: latest  # You can use "latest" or specify a version number
       run: |
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY .
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
     - name: Deploy to ECS
       env:
         ECS_CLUSTER: hello-world-cluster
         ECS_SERVICE: hello-world-service
-        IMAGE_URI: ${{ steps.login-ecr.outputs.registry }}/hello-world
+        IMAGE_URI: ${{ steps.login-ecr.outputs.registry }}/hello-world:$IMAGE_TAG
 
       run: |
         aws ecs update-service --cluster $ECS_CLUSTER --service $ECS_SERVICE --force-new-deployment --region ${{ secrets.AWS_REGION }}
