--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,43 +1,44 @@
-name: CI/CD Pipeline
-on:
-  push:
-    branches:
-      - main
+name: Build and push image to ECR
+
+on: push
+  
+
 jobs:
-  deploy:
+  
+  build:
+    
+    name: Build Image
     runs-on: ubuntu-latest
 
+   
     steps:
-    - name: Checkout code
+
+    - name: Check out code
       uses: actions/checkout@v2
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-
+    
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}
+        aws-region: us-west-2
 
-    - name: Log in to Amazon ECR
+    - name: Login to Amazon ECR
+      id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
-      with:
-        region: us-west-2
 
     - name: Build, tag, and push image to Amazon ECR
       env:
         ECR_REGISTRY: ap-reg
         ECR_REPOSITORY: hello-world
-        IMAGE_TAG: latest  # You can use "latest" or specify a version number
+        IMAGE_TAG: latest
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -y
-    - name: Deploy to ECS
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+     - name: Deploy to ECS
       env:
         ECS_CLUSTER: hello-world-cluster
         ECS_SERVICE: hello-world-service
-        IMAGE_URI: ${{ steps.login-ecr.outputs.registry }}/hello-world:${{ github.sha }}
+        IMAGE_URI: ${{ steps.login-ecr.outputs.registry }}/hello-world:latest
       run: |
         aws ecs update-service --cluster $ECS_CLUSTER --service $ECS_SERVICE --force-new-deployment --region ${{ secrets.AWS_REGION }}
