--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "iac_task",
+  "name": "docker_nodejs_demo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,5 +8,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "config": "^3.3.6",
+    "express": "^4.17.1"
+  }
 }
